--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Cool Calculator</string>
+    <string name="insert_your_number">Insert your number!</string>
+    <string name="roots">Roots</string>
+    <string name="delete_calculation">delete calculation</string>
 </resources>
